Job-Post Preview popup view changes and the post-job view changes

--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -109,7 +109,7 @@
               <input  *ngIf="(defaultProfilePic || employerDetails?.photo !='default.png')" [style.top]="(defaultProfilePic || employerDetails?.photo) ? '-150px' : '-150px'" type="file" class="upload-input" #companyImage
                 (change)="handleFileInput($event, CropImage);" />
               <!-- <input type="file" name="file-5[]" id="file-5" class="inputfile inputfile-4" data-multiple-caption="{count} files selected" multiple=""> -->
-              <label for="file-5" *ngIf="employerDetails?.photo =='default.png'" >
+              <label for="file-5" *ngIf="!defaultProfilePic && employerDetails?.photo =='default.png'" >
                 <i class="fas fa-user-tie"></i>
                 <span>{{"postYourResume.uploadPhoto" | translate }} <br> ({{"postYourResume.dragAndDrop" | translate
                   }})</span>
