--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -445,8 +445,8 @@
             </button> -->
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"
         (click)="mbRef.close('Closed from Close button')">
-        <span>Close</span>
-        <i class="fas fa-times right ml-2"></i>
+        <!-- <span>Close</span> -->
+        <i class="fas fa-times right ml-2" style="font-size:30px;"></i>
       </button>
         </div>
         <div class="modal-body">
