--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -80,7 +80,7 @@
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"postYourResume.state" | translate}}</label>
-				<input formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.state' | translate">
+				<input appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.state' | translate">
 				<app-control-messages [control]="f['state']"></app-control-messages>
 			</div>
 		</div>
