--- a/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
@@ -2,7 +2,7 @@
 	<div class="row mt-5">	
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label class="font-weight-bold" appMarkAsterisk>Client Facing Role  </label>
+				<label class="font-weight-bold" >Client Facing Role  </label>
 				 <div class="mt-2">
 					 <div class="custom-control custom-radio custom-control-inline">
 						  <input type="radio" id="customRadioInline5"  value="0" formControlName="facing_role" name="facing_role" class="custom-control-input">
@@ -19,7 +19,7 @@
 	<div class="row mt-4">	
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label class="font-weight-bold" appMarkAsterisk>Training Experience </label>
+				<label class="font-weight-bold" >Training Experience </label>
 				<div class="mt-2">
 					<div class="custom-control custom-radio custom-control-inline">
 						<input type="radio" value="0" formControlName="training_experience" id="customRadioInline7" name="training_experience" class="custom-control-input">
@@ -92,54 +92,29 @@
 			</div>
 		</div>
 	</div>	
-	<ng-container *ngIf="childForm?.value?.otherPref?.extra_criteria?.length > 0">
-		<div class="col-lg-12 mb-3">
-			<h6 class="font-weight-bold mb-2" >Extra Criteria</h6>
+	
+	<div class="row mt-2">
+		<div class="col-lg-12 col-md-6">
+			<label>{{"postJob.extraCriteria" | translate }} </label>
+			<div ></div>
 		</div>
-		<div class="row info-box" *ngFor="let extra_criteria of childForm?.value?.otherPref?.extra_criteria; let i = index" >
-			<div class="col-lg-4 caption">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize">{{extra_criteria?.title}}</li>
-				</ul>
+	</div>
+	<div class="row mt-2" *ngFor="let ticket of t.controls; let i = index; let last = last">
+		<ng-container [formGroup]="ticket">
+			<div class="col-lg-5 col-md-4">
+				<input formControlName="title" maxlength="32" class="form-control mt-4" type="text" placeholder="Title">
+				<app-control-messages [control]="ticket['controls']['title']"></app-control-messages>
 			</div>
-			<div class="col-lg-6 info">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize">{{extra_criteria?.value}}</li>
-				</ul>
+			<div class="col-lg-5 col-md-4">
+				<input formControlName="value" maxlength="32" class="form-control mt-4" type="text" placeholder="Reuirement">
+				<app-control-messages [control]="ticket['controls']['value']"></app-control-messages>
 			</div>
-			<div class="col-lg-1 col-md-1 d-flex justify-content-center align-items-center" style="padding-top: 20px;">
+			<div class="col-lg-2 col-md-4" style="top: 25px;">
 				<button type="button" class="btn btn-outline-danger"
 					style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
-			</div>
-		</div>
-	</ng-container>	
-	<button (click)="onOpenCriteriaModal()" type="button" class="btn btn-theme-green" data-toggle="modal"
-			data-target="#addCriteria">Add Another Criteria</button>
-</div>	
-
-<ng-template *ngIf="isOpenCriteriaModal" #criteriaModal let-modal>
-
-	<div *ngIf="t?.controls?.length > 0">
-		<ng-container [formGroup]="t?.controls[0]">
-			<div class="modal-header">
-				<h5 class="modal-title" id="addCriteria">Add Another Criteria</h5>
-				<button  (click)="onCloseCriteriaModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body" style="min-height:250px;">
-				<input formControlName="title" class="form-control mt-4" type="text" placeholder="Title">
-				<app-control-messages [control]="t?.controls[0]['controls']['title']"></app-control-messages>
-				<input formControlName="value" class="form-control mt-4" type="text" placeholder="Requirement">
-				<app-control-messages [control]="t?.controls[0]['controls']['value']"></app-control-messages>
-			</div>
-			<div class="modal-footer">
-				<button (click)="onCloseCriteriaModal()" type="button" class="btn btn-secondary "
-					data-dismiss="modal">Close</button>
-				<button [disabled]="(childForm?.value?.jobPrev?.temp_extra_criteria[0].title == '') || (childForm?.value?.jobPrev?.temp_extra_criteria[0].value == '')" (click)="onAddExtraCriteria()" type="button" class="btn btn-theme-blue"
-					data-dismiss="modal">Add</button>
+				<button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green ml-2"
+					style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
 			</div>
 		</ng-container>
 	</div>
-	
-</ng-template>
+</div>	
