--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -101,7 +101,7 @@
 			<div class="col-lg-2 col-md-4">
 				<button type="button" class="btn btn-outline-danger"
 					style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
-				<button *ngIf="last" (click)="onDuplicate()" type="button" class="btn btn-outline-green ml-2"
+				<button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green ml-2"
 					style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
 			</div>
 		</ng-container>
@@ -193,8 +193,8 @@
 		</div> -->
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
-				<label>{{"postJob.endToEndImplementation" | translate }} </label>
-				<input numbersOnly type="text" class="form-control w-25" formControlName="end_to_end_implementation">
+				<label >{{"postJob.endToEndImplementation" | translate }} </label>
+				<input appMarkAsterisk numbersOnly type="text" class="form-control w-25" formControlName="end_to_end_implementation">
 			</div>
 		</div>
 	</div>
