Job Issue Fixing and the Profile changes

--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -71,7 +71,7 @@
           </div>
           <div class="form-group">
             <label>Phone Number</label>
-			<ngx-intl-tel-input appMarkAsterisk (ngModelChange)="checkNumber()"
+			<ngx-intl-tel-input (ngModelChange)="checkNumber()"
 			  [maxLength]="15"  (countryChange)="onCountryChange($event)" [cssClass]="'form-control'" [preferredCountries]="preferredCountries"
 			  [enableAutoCountrySelect]="true" [enablePlaceholder]="true" [searchCountryFlag]="true"
 			  [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]" [selectFirstCountry]="false"
