--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
@@ -80,7 +80,7 @@
       <div class=" form-group">
         <label>{{"postYourResume.roleType" | translate }}</label>
           <select formControlName="employer_role_type" class="form-control text-capitalize">
-              <option >Select Role Type</option>
+              <option value=''>Select Role Type</option>
               <option  value="Technical">Technical</option>
               <option  value="Functional">Functional</option>
               <option  value="Technofunctional">Technofunctional</option>
