--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -372,7 +372,7 @@
 			<div class="col-lg-5 info">
 				<ul class="list-group">
 					<li class="list-group-item text-uppercase" *ngIf="postJobForm?.value?.otherPref?.certification">
-							<small class="m-0 float-left" *ngFor="let item of postJobForm?.value?.otherPref?.certification">
+							<small class="m-0 float-left" *ngFor="let item of postJobForm?.value?.otherPref?.certification; let i = index; let last = last;">
 								<span class="float-left">{{item}}{{last ? '' : '&nbsp;,&nbsp;&nbsp;'}}</span>
 							</small> 
 							<button *ngIf="postJobForm?.value?.otherPref?.certification.length==0" style="font-size: 10px;padding: 5px;" (click)="onOpenCriteriaModal('certification')" type="button" class="btn btn-theme-green" data-toggle="modal"
@@ -619,6 +619,101 @@
 								<div class="custom-control custom-radio">
 								  <input type="radio" disabled (change)="handleChange($event)"   value="2"  id="customRadio16C" name="work_authorization" formControlName="work_authorization"  class="custom-control-input">
 								  <label class="custom-control-label" for="customRadio16C">&nbsp;</label>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>		
+		<div class="row info-box" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2" >
+			<div class="col-lg-3 caption">
+				<ul class="list-group">
+					<li class="list-group-item text-capitalize m-0">{{"postJob.authorizedToWork"  | translate }}</li>
+				</ul>
+			</div>
+			<div class="col-lg-5 info">
+				<ul class="list-group" *ngIf="postJobForm?.value?.requirement?.authorized_to_work">
+					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2 && postJobForm?.value?.requirement?.authorized_to_work.length ==0 ">
+					<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('authorized_to_work')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button></li>
+					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2  && postJobForm?.value?.requirement?.authorized_to_work.length !=0 ">{{findCountry(postJobForm?.value?.requirement?.authorized_to_work)}}</li>
+				</ul>
+				<ul class="list-group" *ngIf="!postJobForm?.value?.requirement?.authorized_to_work">
+					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2"><button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('authorized_to_work')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button></li>
+				</ul>
+			</div>
+			<div class="col-lg-4" *ngIf="!postJobForm?.value?.requirement?.authorized_to_work">
+				<ul class="list-group">
+					<li class="list-group-item border-0 p-0 m-0 ">							
+						<div class="d-flex">
+							<div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled (change)="handleChange($event)"   value="0"  id="customRadio01A" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio01A">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled (change)="handleChange($event)"   value="1"  id="customRadio01B" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio01B">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+								  <input type="radio" disabled (change)="handleChange($event)"   value="2"  id="customRadio01C" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio01C">&nbsp;</label>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="col-lg-4" *ngIf="postJobForm?.value?.requirement?.authorized_to_work">
+				<ul class="list-group" *ngIf="postJobForm?.value?.requirement?.authorized_to_work.length ==0 ">
+					<li class="list-group-item border-0 p-0 m-0 ">							
+						<div class="d-flex">
+							<div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled (change)="handleChange($event)"   value="0"  id="customRadio01A" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio01A">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled (change)="handleChange($event)"   value="1"  id="customRadio01B" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio01B">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+								  <input type="radio" disabled (change)="handleChange($event)"   value="2"  id="customRadio01C" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio01C">&nbsp;</label>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+				<ul class="list-group" *ngIf="postJobForm?.value?.requirement?.authorized_to_work.length !=0 ">
+					<li class="list-group-item border-0 p-0 m-0 ">							
+						<div class="d-flex">
+							<div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" (change)="handleChange($event)"   value="0"  id="customRadio01A" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio01A">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" (change)="handleChange($event)"   value="1"  id="customRadio01B" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio01B">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+								  <input type="radio" (change)="handleChange($event)"   value="2"  id="customRadio01C" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio01C">&nbsp;</label>
 								</div>
 							</div>
 						</div>
@@ -1118,6 +1213,38 @@
 			</div>
 			</div>
 			</div>
+	<div class="modal-body"  *ngIf="authorized_to_work && this.postJobForm.value.requirement.work_authorization == 2">
+		<div class="col-lg-12 col-md-6" formGroupName="requirement">
+			<div class=" form-group">
+				<label>{{"postYourResume.authorizedToWork" | translate }}</label>	
+				<ngx-select
+					class="text-capitalize"
+					[placeholder]="'Other Country'"
+					[multiple]="true"
+					[items]="authorized_country"
+					formControlName="authorized_to_work"
+					optionValueField="id"
+					optionTextField="nicename"
+					autoClearSearch="true"
+					noResultsFound="No results found"
+				>
+				<ng-template ngx-select-option-selected let-option let-text="text">
+				  {{option?.text ? option?.text?.split('-')[0] : ''}}
+				</ng-template>
+
+				<ng-template ngx-select-option let-option let-text="text">
+					{{option?.text}}
+				</ng-template>
+
+				<ng-template ngx-select-option-not-found>
+					Nothing found
+				</ng-template>
+				</ngx-select>
+			</div>
+			</div>
+	
+			</div>
+			
 		<div class="modal-footer">
 			<button (click)="closeSave()" type="button" class="btn btn-theme-blue">
 				save
