--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -357,8 +357,30 @@
 				</div>
 				<div class="col-lg-8 info">
 					<ul class="list-group">
-						<li class="list-group-item text-capitalize">
+						<li class="list-group-item text-capitalize" *ngIf="childForm?.value?.jobPref?.job_role">
 							{{childForm?.value?.jobPref?.job_role ? childForm?.value?.jobPref?.job_role : '--'}}
+						</li>
+						<li class="list-group-item text-capitalize" *ngIf="!childForm?.value?.jobPref?.job_role || childForm?.value?.jobPref?.job_role ==''">
+							<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('jobtype')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-lg-12 row">
+				<div class="col-lg-4 caption">
+					<ul class="list-group">
+						<li class="list-group-item text-capitalize">{{"postYourResume.roleType" | translate }}</li>
+					</ul>
+				</div>
+				<div class="col-lg-8 info">
+					<ul class="list-group">
+						<li class="list-group-item text-capitalize" *ngIf="childForm?.value?.educationExp?.employer_role_type">
+							{{childForm?.value?.educationExp?.employer_role_type ? childForm?.value?.educationExp?.employer_role_type : '--'}}
+						</li>
+						<li class="list-group-item text-capitalize" *ngIf="!childForm?.value?.educationExp?.employer_role_type || childForm?.value?.educationExp?.employer_role_type ==''">
+							<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('jobtype')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button>
 						</li>
 					</ul>
 				</div>
@@ -385,9 +407,12 @@
 				</div>
 				<div class="col-lg-8 info">
 					<ul class="list-group">
-						<li class="list-group-item text-capitalize">
+						<li class="list-group-item text-capitalize" *ngIf="childForm?.value?.educationExp?.end_to_end_implementation">
 							{{childForm?.value?.educationExp?.end_to_end_implementation ? childForm?.value?.educationExp?.end_to_end_implementation : '--'}}
 						</li>
+						<li class="list-group-item text-capitalize" *ngIf="!childForm?.value?.educationExp?.end_to_end_implementation">
+						<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('end_to_end_implementation')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button></li>
 					</ul>
 				</div>
 			</div>
@@ -432,4 +457,44 @@
 		<button  (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Edit</button>
 		<button type="button" class="btn btn-theme-blue btn-sm" (click)="onRedirectDashboard()">Save & Close</button>
 	</div>
+</ng-template>
+
+<ng-template *ngIf="isOpenCriteriaModal" #criteriaModal let-modal>
+	<div class="modal-header">
+			<button (click)="closeAdd()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">×</span>
+			</button> 
+		</div>
+		<div class="modal-body"  *ngIf="jobtype">
+			<div formGroupName="educationExp">
+				<div class="col-lg-12 col-md-12">
+					<div class=" form-group">
+						<label>{{"postYourResume.roleType" | translate }}</label>
+						<select formControlName="employer_role_type" class="form-control text-capitalize">
+							<option value="" selected="" >Select Role Type</option>
+							<option  value="Technical">Technical</option>
+							<option  value="Functional">Functional</option>
+							<option  value="Technofunctional">Technofunctional</option>
+						</select>
+					</div>
+				</div>
+			</div>
+		</div>	
+		<div class="modal-body"  *ngIf="end_to_end_implementation">
+			<div formGroupName="educationExp">
+				<div class="col-lg-6 col-md-12">
+				  <div class=" form-group">
+					<label>End to End Implementation</label>
+					<input numbersOnlys formControlName="end_to_end_implementation" type="text" class="form-control w-25">
+				  </div>
+				</div>
+			</div>
+		</div>	
+			
+		<div class="modal-footer">
+			<button (click)="closeSave()" type="button" class="btn btn-theme-blue">
+				save
+			</button>
+		</div>
+	
 </ng-template>
