--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.css
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.css
@@ -4,3 +4,9 @@
   text-overflow: ellipsis;
   width: 250px;
 }
+.job-cardh6 {
+    font-weight: 700;
+    font-size: 13px;
+    color: #465666;
+    margin-bottom: 7px;
+}
