--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -37,14 +37,14 @@
                       {{postedJobsDetails?.title}}
                     </h5>
                   </div>
-                  <div class="col-lg-5 text-right">
+                  <div class="col-lg-5 ">
                     <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1)" class="btn btn-outline-warning btn-sm mr-1" [routerLink]="['/employer/post-job']" [queryParams]="{id: postedJobsDetails?.id}" href="javascript:;" title="Edit"><i class="fas fa-pencil-alt"></i> {{"dashboard.edit" | translate}}</a>
                     <a class="btn btn-outline-blue btn-sm mr-1" href="javascript:;" (click)="onToggleJDModal(true)"><i class="fas fa-file-alt"></i> {{"dashboard.description" | translate}}</a>
                     <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1)" class="btn btn-outline-green btn-sm" [routerLink]="['/employer/dashboard']" [queryParams]="{activeTab: 'matches', id: postedJobsDetails?.id}" href="javascript:;" title="Matches"><i class="fas fa-tasks"></i> {{"dashboard.matches" | translate}}</a>
                   </div>
                 </div>
 				<div class="row">
-                <div class="media col-lg-6">
+                <div class="media col-lg-7">
                   <div class="media-body">
                     <h6>{{postedJobsDetails?.company?.company ? postedJobsDetails?.company?.company : ''}}</h6>
                     <h6 class="text-capitalize">
@@ -58,20 +58,21 @@
                     </h6>
                   </div>
                 </div>
-				<div class="col-lg-6" style="text-align: right;">
-							 <h6 class="font-weight-bold " style="font-size: 13px;">{{"postJob.salary" | translate}}</h6>
+				<div class="col-lg-5" >
 							<ng-container *ngIf="postedJobsDetails?.salary_type == 0">
-								<h6 class="text-capitalize" style="font-size: 13px;">{{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + '/hr'}}</h6>
+								<h6 class="text-capitalize job-cardh6" >{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + '/ hr'}}</h6>
 							</ng-container>
 							<ng-container *ngIf="postedJobsDetails?.salary_type ==1">
-								<h6 class="text-capitalize" style="font-size: 13px;">{{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' Annual pay'}}</h6>
+								<h6 class="text-capitalize job-cardh6" >{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / Annual'}}</h6>
 							</ng-container>
 							<ng-container *ngIf="postedJobsDetails?.salary_type ==2">
-								<h6 class="text-capitalize" style="font-size: 13px;">{{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' Monthly pay'}}</h6>
+								<h6 class="text-capitalize job-cardh6" >{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' / Monthly'}}</h6>
 							</ng-container>
 							<ng-container  *ngIf="postedJobsDetails?.salary_type < 0">
 								--
 							</ng-container>
+							<h6 class="text-capitalize job-cardh6" >{{"postJob.remote" | translate }} : {{utilsHelperService.onGetYesOrNoValue(postedJobsDetails?.remote)}}</h6>
+							<h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate }} : {{utilsHelperService.onGetYesOrNoValue(postedJobsDetails?.willing_to_relocate)}}</h6>
 						</div>
 					</div>
               </div>
