--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.css
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.css
@@ -44,3 +44,9 @@
     font-size: 14px !important;
     font-weight: 600 !important;
 }
+.job-cardh6 {
+    font-weight: 700;
+    font-size: 13px;
+    color: #465666;
+    margin-bottom: 7px;
+}
