--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -30,19 +30,20 @@
 							</div>
 						</div>
 						<div class="col-lg-6" style="text-align: right;">
-							 <h6 class="font-weight-bold " style="font-size: 13px;">{{"postJob.salary" | translate}}</h6>
 							<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type == 0">
-								<h6 class="text-capitalize" style="font-size: 13px;">{{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + '/hr'}}</h6>
+								<h6 class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / hr'}}</h6>
 							</ng-container>
 							<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type ==1">
-								<h6 class="text-capitalize" style="font-size: 13px;">{{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' Annual pay'}}</h6>
+								<h6 class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / Annual '}}</h6>
 							</ng-container>
 							<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type ==2">
-								<h6 class="text-capitalize" style="font-size: 13px;">{{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + '/ month'}}</h6>
+								<h6 class="text-capitalize job-cardh6">{{"postJob.salary" | translate}} : {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / month'}}</h6>
 							</ng-container>
 							<ng-container  *ngIf="postJobForm?.value?.jobInfo?.salary_type < 0">
 								--
 							</ng-container>
+							<h6 class="text-capitalize job-cardh6">{{"postJob.remote" | translate}} :  {{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.remote)}} </h6>
+							<h6 class="text-capitalize job-cardh6" >{{"postJob.relocate" | translate}} :  {{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.willing_to_relocate)}} </h6>
 						</div>
 						</div>
 					</div>
@@ -372,7 +373,7 @@
 			<div class="col-lg-5 info">
 				<ul class="list-group">
 					<li class="list-group-item text-uppercase" *ngIf="postJobForm?.value?.otherPref?.certification">
-							<small class="m-0 float-left" *ngFor="let item of postJobForm?.value?.otherPref?.certification">
+							<small class="m-0 float-left" *ngFor="let item of postJobForm?.value?.otherPref?.certification; let i = index; let last = last;">
 								<span class="float-left">{{item}}{{last ? '' : '&nbsp;,&nbsp;&nbsp;'}}</span>
 							</small> 
 							<button *ngIf="postJobForm?.value?.otherPref?.certification.length==0" style="font-size: 10px;padding: 5px;" (click)="onOpenCriteriaModal('certification')" type="button" class="btn btn-theme-green" data-toggle="modal"
@@ -626,6 +627,101 @@
 				</ul>
 			</div>
 		</div>		
+		<div class="row info-box" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2" >
+			<div class="col-lg-3 caption">
+				<ul class="list-group">
+					<li class="list-group-item text-capitalize m-0">{{"postJob.authorizedToWork"  | translate }}</li>
+				</ul>
+			</div>
+			<div class="col-lg-5 info">
+				<ul class="list-group" *ngIf="postJobForm?.value?.requirement?.authorized_to_work">
+					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2 && postJobForm?.value?.requirement?.authorized_to_work.length ==0 ">
+					<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('authorized_to_work')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button></li>
+					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2  && postJobForm?.value?.requirement?.authorized_to_work.length !=0 ">{{findCountry(postJobForm?.value?.requirement?.authorized_to_work)}}</li>
+				</ul>
+				<ul class="list-group" *ngIf="!postJobForm?.value?.requirement?.authorized_to_work">
+					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2"><button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('authorized_to_work')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button></li>
+				</ul>
+			</div>
+			<div class="col-lg-4" *ngIf="!postJobForm?.value?.requirement?.authorized_to_work">
+				<ul class="list-group">
+					<li class="list-group-item border-0 p-0 m-0 ">							
+						<div class="d-flex">
+							<div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled (change)="handleChange($event)"   value="0"  id="customRadio01A" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio01A">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled (change)="handleChange($event)"   value="1"  id="customRadio01B" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio01B">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+								  <input type="radio" disabled (change)="handleChange($event)"   value="2"  id="customRadio01C" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio01C">&nbsp;</label>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="col-lg-4" *ngIf="postJobForm?.value?.requirement?.authorized_to_work">
+				<ul class="list-group" *ngIf="postJobForm?.value?.requirement?.authorized_to_work.length ==0 ">
+					<li class="list-group-item border-0 p-0 m-0 ">							
+						<div class="d-flex">
+							<div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled (change)="handleChange($event)"   value="0"  id="customRadio01A" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio01A">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" disabled (change)="handleChange($event)"   value="1"  id="customRadio01B" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio01B">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+								  <input type="radio" disabled (change)="handleChange($event)"   value="2"  id="customRadio01C" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio01C">&nbsp;</label>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+				<ul class="list-group" *ngIf="postJobForm?.value?.requirement?.authorized_to_work.length !=0 ">
+					<li class="list-group-item border-0 p-0 m-0 ">							
+						<div class="d-flex">
+							<div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" (change)="handleChange($event)"   value="0"  id="customRadio01A" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio01A">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" (change)="handleChange($event)"   value="1"  id="customRadio01B" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio01B">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+								  <input type="radio" (change)="handleChange($event)"   value="2"  id="customRadio01C" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio01C">&nbsp;</label>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>		
 		<div class="row info-box">
 			<div class="col-lg-3 caption">
 				<ul class="list-group">
@@ -636,6 +732,9 @@
 				<ul class="list-group">
 					<li class="list-group-item" *ngIf="postJobForm?.value?.otherPref?.facing_role == '0'">{{"postJob.required" | translate}}</li>
 					<li class="list-group-item" *ngIf="postJobForm?.value?.otherPref?.facing_role == '1'">{{"postJob.notRequired" | translate}}</li>
+					<li class="list-group-item" *ngIf="!postJobForm?.value?.otherPref?.facing_role || postJobForm?.value?.otherPref?.facing_role=='' ">
+					<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('clientfacing')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button></li>
 				</ul>
 			</div>
 			<div class="col-lg-4" *ngIf="!postJobForm?.value?.otherPref?.facing_role || postJobForm?.value?.otherPref?.facing_role=='' ">
@@ -701,6 +800,9 @@
 				<ul class="list-group">
 					<li class="list-group-item" *ngIf="postJobForm?.value?.otherPref?.training_experience == '0'">{{"postJob.required" | translate}}</li>
 					<li class="list-group-item" *ngIf="postJobForm?.value?.otherPref?.training_experience == '1'">{{"postJob.notRequired" | translate}}</li>
+					<li class="list-group-item" *ngIf="!postJobForm?.value?.otherPref?.training_experience || postJobForm?.value?.otherPref?.training_experience=='' ">
+					<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('training')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button></li>
 				</ul>
 			</div>
 			<div class="col-lg-4" *ngIf="!postJobForm?.value?.otherPref?.training_experience || postJobForm?.value?.otherPref?.training_experience==''">
@@ -905,6 +1007,44 @@
 								<div class="custom-control custom-radio">
 								  <input type="radio" (change)="handleChange($event)"   value="2"  id="customRadio22C" name="remote" formControlName="remote"  class="custom-control-input">
 								  <label class="custom-control-label" for="customRadio22C">&nbsp;</label>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>					
+		<div class="row info-box">
+			<div class="col-lg-3 caption">
+				<ul class="list-group">
+					<li class="list-group-item text-capitalize m-0">{{"postJob.relocate" | translate}}</li>
+				</ul>
+			</div>
+			<div class="col-lg-5 info">
+				<ul class="list-group">
+					<li class="list-group-item">{{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.willing_to_relocate)}}</li>
+				</ul>
+			</div>
+			<div class="col-lg-4">
+				<ul class="list-group">
+					<li class="list-group-item border-0 p-0 m-0 ">							
+						<div class="d-flex">
+							<div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" (change)="handleChange($event)"   value="0"  id="customRadio220A" name="willing_to_relocate" formControlName="willing_to_relocate"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio220A">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+									<input type="radio" (change)="handleChange($event)"   value="1"  id="customRadio220B" name="willing_to_relocate" formControlName="willing_to_relocate"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio220B">&nbsp;</label>
+								</div>
+							 </div>
+							 <div class="rdn-radio">
+								<div class="custom-control custom-radio">
+								  <input type="radio" (change)="handleChange($event)"   value="2"  id="customRadio220C" name="willing_to_relocate" formControlName="willing_to_relocate"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio220C">&nbsp;</label>
 								</div>
 							</div>
 						</div>
@@ -1118,6 +1258,72 @@
 			</div>
 			</div>
 			</div>
+	<div class="modal-body"  *ngIf="authorized_to_work && this.postJobForm.value.requirement.work_authorization == 2">
+		<div class="col-lg-12 col-md-6" formGroupName="requirement">
+			<div class=" form-group">
+				<label>{{"postYourResume.authorizedToWork" | translate }}</label>	
+				<ngx-select
+					class="text-capitalize"
+					[placeholder]="'Other Country'"
+					[multiple]="true"
+					[items]="authorized_country"
+					formControlName="authorized_to_work"
+					optionValueField="id"
+					optionTextField="nicename"
+					autoClearSearch="true"
+					noResultsFound="No results found"
+				>
+				<ng-template ngx-select-option-selected let-option let-text="text">
+				  {{option?.text ? option?.text?.split('-')[0] : ''}}
+				</ng-template>
+
+				<ng-template ngx-select-option let-option let-text="text">
+					{{option?.text}}
+				</ng-template>
+
+				<ng-template ngx-select-option-not-found>
+					Nothing found
+				</ng-template>
+				</ngx-select>
+			</div>
+			</div>
+	
+			</div>
+			<div class="modal-body"  *ngIf="clientfacing">
+				<div class="col-lg-12 col-md-12" formGroupName="otherPref" >
+					<div class=" form-group">
+						<label class="font-weight-bold" >Client Facing Role  </label>
+						 <div class="mt-2">
+							 <div class="custom-control custom-radio custom-control-inline">
+								  <input type="radio" id="customRadioInline55"  value="0" formControlName="facing_role" name="facing_role" class="custom-control-input">
+								  <label class="custom-control-label" for="customRadioInline55">Required</label>
+							</div>
+							<div class="custom-control custom-radio custom-control-inline">
+								<input type="radio" id="customRadioInline66"  value="1" formControlName="facing_role" name="facing_role"  class="custom-control-input">
+								<label class="custom-control-label" for="customRadioInline66">Not Required</label>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="modal-body"  *ngIf="training">
+				<div class="col-lg-12 col-md-12" formGroupName="otherPref" >
+					<div class=" form-group">
+						<label class="font-weight-bold" >Training Experience   </label>
+						 <div class="mt-2">
+							 <div class="custom-control custom-radio custom-control-inline">
+								  <input type="radio" id="customRadioInline555"  value="0" formControlName="training_experience" name="training_experience" class="custom-control-input">
+								  <label class="custom-control-label" for="customRadioInline555">Required</label>
+							</div>
+							<div class="custom-control custom-radio custom-control-inline">
+								<input type="radio" id="customRadioInline666"  value="1" formControlName="training_experience" name="training_experience"  class="custom-control-input">
+								<label class="custom-control-label" for="customRadioInline666">Not Required</label>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
 		<div class="modal-footer">
 			<button (click)="closeSave()" type="button" class="btn btn-theme-blue">
 				save
