--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -71,7 +71,7 @@
           </div>
           <div class="form-group">
             <label>Phone Number</label>
-			<ngx-intl-tel-input appMarkAsterisk (ngModelChange)="checkNumber()"
+			<ngx-intl-tel-input (ngModelChange)="checkNumber()"
 			  [maxLength]="15"  (countryChange)="onCountryChange($event)" [cssClass]="'form-control'" [preferredCountries]="preferredCountries"
 			  [enableAutoCountrySelect]="true" [enablePlaceholder]="true" [searchCountryFlag]="true"
 			  [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]" [selectFirstCountry]="false"
@@ -111,7 +111,7 @@
               <!-- <input type="file" name="file-5[]" id="file-5" class="inputfile inputfile-4" data-multiple-caption="{count} files selected" multiple=""> -->
               <label for="file-5" *ngIf="!defaultProfilePic && employerDetails?.photo =='default.png'" >
                 <i class="fas fa-user-tie"></i>
-                <span>{{"postYourResume.uploadPhoto" | translate }} <br> ({{"postYourResume.dragAndDrop" | translate
+                <span>{{"postYourResume.uploadPhotoCompany" | translate }} <br> ({{"postYourResume.dragAndDrop" | translate
                   }})</span>
               </label>
             </div>
