Profile Bug Fixing and the Job post Bug Fixing

--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -595,13 +595,16 @@
 			</div>
 			<div class="col-lg-5 info">
 				<ul class="list-group">
-					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 0">{{"postJob.shouldBeACitizenPr" | translate }}</li>
-					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 1">{{"postJob.shouldBeHavingAWorkPermit" | translate }}</li>
-					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2">{{"postJob.shouldBeACitizenPrWork" | translate }}</li>
+					<li class="list-group-item" *ngIf=" postJobForm?.value?.requirement?.work_authorization && postJobForm?.value?.requirement?.work_authorization != '' && postJobForm?.value?.requirement?.work_authorization == 0">{{"postJob.shouldBeACitizenPr" | translate }}</li>
+					<li class="list-group-item" *ngIf=" postJobForm?.value?.requirement?.work_authorization && postJobForm?.value?.requirement?.work_authorization != '' &&postJobForm?.value?.requirement?.work_authorization == 1">{{"postJob.shouldBeHavingAWorkPermit" | translate }}</li>
+					<li class="list-group-item" *ngIf=" postJobForm?.value?.requirement?.work_authorization && postJobForm?.value?.requirement?.work_authorization != '' &&postJobForm?.value?.requirement?.work_authorization == 2">{{"postJob.shouldBeACitizenPrWork" | translate }}</li>
+					<li class="list-group-item" *ngIf="!postJobForm?.value?.requirement?.work_authorization || postJobForm?.value?.requirement?.work_authorization == ''">
+					<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('work_authorization')" type="button" class="btn btn-theme-green" data-toggle="modal"
+			data-target="#addCriteria">Add </button></li>
 				</ul>
 			</div>
 			<div class="col-lg-4">
-				<ul class="list-group">
+				<ul class="list-group" *ngIf="!postJobForm?.value?.requirement?.work_authorization || postJobForm?.value?.requirement?.work_authorization == ''" >
 					<li class="list-group-item border-0 p-0 m-0 ">							
 						<div class="d-flex">
 							<div class="rdn-radio">
@@ -625,103 +628,32 @@
 						</div>
 					</li>
 				</ul>
-			</div>
-		</div>		
-		<div class="row info-box" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2" >
-			<div class="col-lg-3 caption">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize m-0">{{"postJob.authorizedToWork"  | translate }}</li>
-				</ul>
-			</div>
-			<div class="col-lg-5 info">
-				<ul class="list-group" *ngIf="postJobForm?.value?.requirement?.authorized_to_work">
-					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2 && postJobForm?.value?.requirement?.authorized_to_work.length ==0 ">
-					<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('authorized_to_work')" type="button" class="btn btn-theme-green" data-toggle="modal"
-			data-target="#addCriteria">Add </button></li>
-					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2  && postJobForm?.value?.requirement?.authorized_to_work.length !=0 ">{{findCountry(postJobForm?.value?.requirement?.authorized_to_work)}}</li>
-				</ul>
-				<ul class="list-group" *ngIf="!postJobForm?.value?.requirement?.authorized_to_work">
-					<li class="list-group-item" *ngIf="postJobForm?.value?.requirement?.work_authorization == 2"><button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('authorized_to_work')" type="button" class="btn btn-theme-green" data-toggle="modal"
-			data-target="#addCriteria">Add </button></li>
-				</ul>
-			</div>
-			<div class="col-lg-4" *ngIf="!postJobForm?.value?.requirement?.authorized_to_work">
-				<ul class="list-group">
+				<ul class="list-group" *ngIf=" (postJobForm?.value?.requirement?.work_authorization && postJobForm?.value?.requirement?.work_authorization != '' ) && postJobForm?.value?.requirement?.work_authorization  == 0 || postJobForm?.value?.requirement?.work_authorization == 2 || postJobForm?.value?.requirement?.work_authorization == 1">
 					<li class="list-group-item border-0 p-0 m-0 ">							
 						<div class="d-flex">
 							<div class="rdn-radio">
 								<div class="custom-control custom-radio">
-									<input type="radio" disabled (change)="handleChange($event)"   value="0"  id="customRadio01A" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input" >
-									<label class="custom-control-label" for="customRadio01A">&nbsp;</label>
+									<input type="radio"  (change)="handleChange($event)"   value="0"  id="customRadio16A" name="work_authorization" formControlName="work_authorization"  class="custom-control-input" >
+									<label class="custom-control-label" for="customRadio16A">&nbsp;</label>
 								</div>
 							 </div>
 							 <div class="rdn-radio">
 								<div class="custom-control custom-radio">
-									<input type="radio" disabled (change)="handleChange($event)"   value="1"  id="customRadio01B" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
-									<label class="custom-control-label" for="customRadio01B">&nbsp;</label>
+									<input type="radio"  (change)="handleChange($event)"   value="1"  id="customRadio16B" name="work_authorization" formControlName="work_authorization"  class="custom-control-input">
+									<label class="custom-control-label" for="customRadio16B">&nbsp;</label>
 								</div>
 							 </div>
 							 <div class="rdn-radio">
 								<div class="custom-control custom-radio">
-								  <input type="radio" disabled (change)="handleChange($event)"   value="2"  id="customRadio01C" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
-								  <label class="custom-control-label" for="customRadio01C">&nbsp;</label>
+								  <input type="radio"  (change)="handleChange($event)"   value="2"  id="customRadio16C" name="work_authorization" formControlName="work_authorization"  class="custom-control-input">
+								  <label class="custom-control-label" for="customRadio16C">&nbsp;</label>
 								</div>
 							</div>
 						</div>
 					</li>
 				</ul>
 			</div>
-			<div class="col-lg-4" *ngIf="postJobForm?.value?.requirement?.authorized_to_work">
-				<ul class="list-group" *ngIf="postJobForm?.value?.requirement?.authorized_to_work.length ==0 ">
-					<li class="list-group-item border-0 p-0 m-0 ">							
-						<div class="d-flex">
-							<div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" disabled (change)="handleChange($event)"   value="0"  id="customRadio01A" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input" >
-									<label class="custom-control-label" for="customRadio01A">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" disabled (change)="handleChange($event)"   value="1"  id="customRadio01B" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
-									<label class="custom-control-label" for="customRadio01B">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-								  <input type="radio" disabled (change)="handleChange($event)"   value="2"  id="customRadio01C" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
-								  <label class="custom-control-label" for="customRadio01C">&nbsp;</label>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-				<ul class="list-group" *ngIf="postJobForm?.value?.requirement?.authorized_to_work.length !=0 ">
-					<li class="list-group-item border-0 p-0 m-0 ">							
-						<div class="d-flex">
-							<div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" (change)="handleChange($event)"   value="0"  id="customRadio01A" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input" >
-									<label class="custom-control-label" for="customRadio01A">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" (change)="handleChange($event)"   value="1"  id="customRadio01B" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
-									<label class="custom-control-label" for="customRadio01B">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-								  <input type="radio" (change)="handleChange($event)"   value="2"  id="customRadio01C" name="authorized_to_work" formControlName="authorized_to_work"  class="custom-control-input">
-								  <label class="custom-control-label" for="customRadio01C">&nbsp;</label>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>		
+		</div>				
 		<div class="row info-box">
 			<div class="col-lg-3 caption">
 				<ul class="list-group">
@@ -1200,7 +1132,7 @@
 
 <ng-template *ngIf="isOpenCriteriaModal" #criteriaModal let-modal>
 	<div class="modal-header">
-			<button (click)="closeAdd()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+			<button (click)="openCheckPopup()" type="button" class="close" aria-label="Close">
 					<span aria-hidden="true">×</span>
 			</button> 
 		</div>
@@ -1258,34 +1190,29 @@
 			</div>
 			</div>
 			</div>
-	<div class="modal-body"  *ngIf="authorized_to_work && this.postJobForm.value.requirement.work_authorization == 2">
-		<div class="col-lg-12 col-md-6" formGroupName="requirement">
-			<div class=" form-group">
-				<label>{{"postYourResume.authorizedToWork" | translate }}</label>	
-				<ngx-select
-					class="text-capitalize"
-					[placeholder]="'Other Country'"
-					[multiple]="true"
-					[items]="authorized_country"
-					formControlName="authorized_to_work"
-					optionValueField="id"
-					optionTextField="nicename"
-					autoClearSearch="true"
-					noResultsFound="No results found"
-				>
-				<ng-template ngx-select-option-selected let-option let-text="text">
-				  {{option?.text ? option?.text?.split('-')[0] : ''}}
-				</ng-template>
-
-				<ng-template ngx-select-option let-option let-text="text">
-					{{option?.text}}
-				</ng-template>
-
-				<ng-template ngx-select-option-not-found>
-					Nothing found
-				</ng-template>
-				</ngx-select>
-			</div>
+	<div class="modal-body"  *ngIf="work_authorization">
+			<div class=" form-group"  formGroupName="requirement" >
+				<label class="font-weight-bold">{{"postJob.workAuthorization" | translate }} </label>
+				<div class="mt-2">
+					<div class="custom-control custom-radio custom-control-inline" style="margin-right: 9px;">
+						<input (change)="onChangeFieldValue('work_authorization', 0)" value="0" formControlName="work_authorization" type="radio" id="customRadioInline05"
+							name="work_authorization" class="custom-control-input">
+						<label class="custom-control-label"
+							for="customRadioInline05">{{"postJob.shouldBeACitizenPr" | translate }}</label>
+					</div>
+					<div class="custom-control custom-radio custom-control-inline" style="margin-right: 9px;">
+						<input (change)="onChangeFieldValue('work_authorization', 1)" value="1" formControlName="work_authorization" type="radio" id="customRadioInline06"
+							name="work_authorization" class="custom-control-input">
+						<label class="custom-control-label"
+							for="customRadioInline06">{{"postJob.shouldBeHavingAWorkPermit" | translate }}</label>
+					</div>
+					<div class="custom-control custom-radio custom-control-inline" style="margin-right: 9px;">
+						<input (change)="onChangeFieldValue('work_authorization', 2)" value="2" formControlName="work_authorization" type="radio" id="customRadioInline07"
+							name="work_authorization" class="custom-control-input">
+						<label class="custom-control-label"
+							for="customRadioInline07">Should be a Citizen / PR / Authorized to Work</label>
+					</div>
+				</div>
 			</div>
 	
 			</div>
@@ -1327,6 +1254,21 @@
 		<div class="modal-footer">
 			<button (click)="closeSave()" type="button" class="btn btn-theme-blue">
 				save
+			</button>
+		</div>
+	
+</ng-template>
+
+<ng-template *ngIf="isCheckModel" #checkModal let-modal>
+		<div class="modal-body" style="text-align: center;">
+			<h5 >Do you want to Save ? </h5>
+		</div>
+		<div class="modal-footer" style="justify-content: center;">
+			<button (click)="cancelCheck()" style="width: 25%;" type="button" class="btn btn-outline-orange">
+				No
+			</button>
+			<button (click)="closeSaveCheck()" style="width: 25%;" type="button" class="btn btn-outline-green">
+				Yes
 			</button>
 		</div>
 	
