--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -214,7 +214,7 @@
 			<div class=" form-group"></div>
 			<div class=" form-group">
 				<label class="font-weight-bold">{{"postJob.workAuthorization" | translate }} </label>
-				<div appMarkAsterisk class="mt-2">
+				<div class="mt-2">
 					<div class="custom-control custom-radio custom-control-inline">
 						<input (change)="onChangeFieldValue('work_authorization', 0)" [value]="0" formControlName="work_authorization" type="radio" id="customRadioInline5"
 							name="work_authorization" class="custom-control-input">
@@ -237,37 +237,6 @@
 			</div>
 			<app-control-messages [control]="f['work_authorization']"></app-control-messages>
 		</div>
-	</div>
-	<div class="row mt-2" *ngIf=" this.childForm.value.requirement.work_authorization == 2">
-		<div class="col-lg-12 col-md-12">
-			<div class=" form-group">
-				<label>{{"postYourResume.authorizedToWork" | translate }} </label> 
-				<ngx-select
-					class="text-capitalize"
-					[placeholder]="'Other Country'"
-					[multiple]="true"
-					[items]="authorized_country"
-					formControlName="authorized_to_work"
-					optionValueField="id"
-					optionTextField="nicename"
-					autoClearSearch="true"
-					noResultsFound="No results found"
-					 >
-				 <ng-template ngx-select-option-selected let-option let-text="text">
-				  {{option?.text ? option?.text?.split('-')[0] : ''}}
-				</ng-template>
-
-				<ng-template ngx-select-option let-option let-text="text">
-					{{option?.text}}
-				</ng-template>
-
-				<ng-template ngx-select-option-not-found>
-					Nothing found
-				</ng-template>
-				 </ngx-select>
-				<app-control-messages [control]="f['authorized_to_work']"></app-control-messages>									  
-			</div>
-		</div>		
 	</div>
 	<div class="row mt-3">
 		<div class="col-lg-2 col-md-6">
