--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
@@ -133,7 +133,7 @@
 			</div>
 		</div>
 	</div>	
-	<div class="col-lg-6">
+	<div class="col-lg-6" *ngIf="userInfo?.willing_to_relocate">
 		<div class="row">
 			<div class="col-lg-6 caption">
 				<ul class="list-group">
@@ -227,7 +227,7 @@
 			 <li class="list-group-item text-uppercase"> 
 				<ng-container *ngIf="userInfo?.skills?.length; else elseSkillsTemplate">
 					<small class="knldge m-0 float-left" *ngFor="let item of utilsHelperService.differenceByPropValArray(userInfo?.skills, userInfo?.hands_on_experience, 'skill_id'); let i = index; let last = last;">
-						<span style="cursor: pointer;" class="text-wrap-custom float-left skils-short" *ngIf="!utilsHelperService.isEmptyObj(sharedService.onFindSkillsFromSingleID(item))" tooltipClass="my-custom-classes"  container="body"  placement="top" [ngbTooltip]="utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.long_tag)">
+						<span style="cursor: pointer;" class="float-left skils-short" *ngIf="!utilsHelperService.isEmptyObj(sharedService.onFindSkillsFromSingleID(item))" tooltipClass="my-custom-classes"  container="body"  placement="top" [ngbTooltip]="utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.long_tag)">
 							{{item ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.tag): '--'}}{{last ? '' : '&nbsp;,&nbsp;&nbsp;'}}
 						</span>
 					</small>
